--- a/ecommerce/src/Components/Hero/Hero.css
+++ b/ecommerce/src/Components/Hero/Hero.css
@@ -1,8 +1,54 @@
 .hero {
   height: 100vh;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 5vw;
   background: linear-gradient(180deg, #47fdae, #e1ffea22 60%);
+}
+
+.hero-left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  
+  padding-left: 80px;
+}
+
+.hero-left h2 {
+  margin-top: 20vh;
+  color: #090909;
+  font-size: 22px;
+  font-weight: 600;
+
+}
+
+.hero-left p{
+  color: #171717;
+  font-size: 80px;
+  font-weight: 700;
+}
+.hero-hand-icon {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.hero-latest-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  width: 250px;
+  height: 50px;
+  border-radius: 80px;
+  margin-top: 30px;
+  background: #ff4141;
+  color: white;
+  font-size: 15px;
+  font-weight: 800;
+}
+
+.hero-right {
+  flex: 1;;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
